<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/layoutlb"
        android:layout_width="375dp"
        android:layout_height="773dp"
        android:layout_marginTop="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_leaderboard_layout" />

    <TextView
        android:id="@+id/tvRank1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="188dp"
        android:text="@string/rank1player"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="@font/lora"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb" />

    <TextView
        android:id="@+id/tvRank2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="276dp"
        android:text="@string/rank2Player"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="@font/lora"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb" />

    <TextView
        android:id="@+id/tvRank3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="368dp"
        android:text="@string/rank3player"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="@font/lora"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb" />

    <TextView
        android:id="@+id/tvRank4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="452dp"
        android:text="@string/rank4player"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="@font/lora"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb" />

    <TextView
        android:id="@+id/tvRank5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="608dp"
        android:text="@string/rank5player"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:fontFamily="@font/lora"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llR1Stats"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="542dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/layoutlb"
        app:layout_constraintEnd_toEndOf="@+id/layoutlb"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb">

        <TextView
            android:id="@+id/tvR1Time"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r1time"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR1Turn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r1turn"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r1score"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llR2Stats"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="457dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/layoutlb"
        app:layout_constraintEnd_toEndOf="@+id/layoutlb"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb">

        <TextView
            android:id="@+id/tvR2Time"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r2time"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR2Turn"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r2turn"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r2score"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llR3Stats"
        android:layout_width="165dp"
        android:layout_height="37dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="373dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="363dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/layoutlb"
        app:layout_constraintEnd_toEndOf="@+id/layoutlb"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb">

        <TextView
            android:id="@+id/tvR3Time"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r3time"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR3Turn"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r3turn"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR3Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r3score"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llR4Stats"
        android:layout_width="163dp"
        android:layout_height="35dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="458dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="280dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/layoutlb"
        app:layout_constraintEnd_toEndOf="@+id/layoutlb"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb">

        <TextView
            android:id="@+id/tvR4Time"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r4time"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR4Turn"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r4turn"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR4Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r4score"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llR5Stats"
        android:layout_width="165dp"
        android:layout_height="29dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="191dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/layoutlb"
        app:layout_constraintEnd_toEndOf="@+id/layoutlb"
        app:layout_constraintStart_toStartOf="@+id/layoutlb"
        app:layout_constraintTop_toTopOf="@+id/layoutlb">

        <TextView
            android:id="@+id/tvR5Time"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r5time"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR5Turn"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r5turn"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvR5Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/r5score"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>